add style ag-grid v2

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,7 +9,7 @@
     margin: 0; 
     padding: 3em 8em;
     height: 100vh;
-    background: #667D9D; 
+    background: #555555; 
   }
   
   .main {
