--- a/src/app/components/page-not-found/page-not-found.component.html
+++ b/src/app/components/page-not-found/page-not-found.component.html
@@ -1,11 +1,10 @@
 <div class="main">
     <div class="page-error">
         <div>
-            <h1 style="font-size: 4.5rem;">404</h1>
+            <h1 class="title">404</h1>
         </div>
         <div>
-            <p style="font-size: 1.5rem;">Ooops! Page not found.</p>
+            <p class="article">Ooops! Page not found.</p>
         </div>
     </div>
 </div>
-
