--- a/src/app/components/ag-grid/ag-grid.component.html
+++ b/src/app/components/ag-grid/ag-grid.component.html
@@ -1,17 +1,13 @@
 <div class="main">
-    <ag-grid-angular
-    style="width: 100%; height: 100%; padding: 1em;"
-    class="ag-theme-alpine"
+  <ag-grid-angular
+    class="ag-theme-alpine ag-gridt"
     [gridOptions]="gridOptions"
     [statusBar]="statusBar"
-    [frameworkComponents]="frameworkComponents"
     [rowData]="rowData | async"
     [rowMultiSelectWithClick]="true"
     rowSelection="multiple"
     [columnDefs]="columnDefs"
-
     (firstDataRendered)="onFirstDataRendered($event)"
     >
-</ag-grid-angular>
+  </ag-grid-angular>
 </div>
-
