--- a/src/app/components/page-not-found/page-not-found.component.scss
+++ b/src/app/components/page-not-found/page-not-found.component.scss
@@ -4,9 +4,14 @@
   align-items: center;
   grid-gap: 1.5em;
   height: 50%;
+  .title {
+    font-size: 4.5rem;
+  }
+  .article {
+    font-size: 1.5rem;
+  }
 }
 
 h1, p {
   margin: 0;
 }
-
