add unit test in records components

--- a/src/app/components/ag-grid/components/row-line/checkbox-formatter/checkbox-formatter.component.html
+++ b/src/app/components/ag-grid/components/row-line/checkbox-formatter/checkbox-formatter.component.html
@@ -1,1 +1,1 @@
-<input type="checkbox" (change)="onStateChange($event)" [checked]="checkboxState$ | async">
+<input type="checkbox" (change)="onStateChange($event.target.checked)" [checked]="checkboxState$ | async">
